# a-simple-PluginEngine

trunk-master/: CMakeLists.txt  README.md
trunk-master/CMakeModules/: FindBullet.cmake  FindosgVirtualAssembly.cmake
trunk-master/VA/: CMakeLists.txt
trunk-master/libs/qVA_pe/: CMakeLists.txt  IAppPlugin.cpp  IAppPlugin.h  IApplication.cpp  IApplication.h  MainApplication.cpp  MainApplication.h  PluginHandle.cpp  PluginHandle.h  QVAPELib.h
trunk-master/plugins/: CMakeLists.txt  CMakePluginTpl.cmake
trunk-master/plugins/qGeo/: CMakeLists.txt  QGEOPlugin.h  geoplugin.cpp  geoplugin.h
trunk-master/qVA/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
